--- a/quickcheck-instances.cabal
+++ b/quickcheck-instances.cabal
@@ -1,5 +1,6 @@
 name:               quickcheck-instances
 version:            0.3.23
+x-revision:         1
 synopsis:           Common quickcheck instances
 description:
   QuickCheck instances.
@@ -77,7 +78,7 @@ library
   build-depends:
       base        >=4.5    && <4.15
     , QuickCheck  >=2.13.2 && <2.15
-    , splitmix    >=0.0.2  && <0.1
+    , splitmix    >=0.0.2  && <0.2
 
   build-depends:
       array                 >=0.4.0.0 && <0.6
