--- a/quickcheck-instances.cabal
+++ b/quickcheck-instances.cabal
@@ -58,6 +58,7 @@ library
     Test.QuickCheck.Instances.ByteString
     Test.QuickCheck.Instances.CaseInsensitive
     Test.QuickCheck.Instances.Containers
+    Test.QuickCheck.Instances.DataFix
     Test.QuickCheck.Instances.Hashable
     Test.QuickCheck.Instances.Natural
     Test.QuickCheck.Instances.OldTime
@@ -86,7 +87,9 @@ library
     , bytestring            >=0.9.2.1 && <0.11
     , case-insensitive      >=1.2.0.4 && <1.3
     , containers            >=0.4.2.1 && <0.7
+    , data-fix              >=0.3     && <0.4
     , hashable              >=1.2.7.0 && <1.4
+    , integer-logarithms    >=1.0.3   && <1.1
     , old-time              >=1.1.0.0 && <1.2
     , scientific            >=0.3.6.2 && <0.4
     , strict                >=0.4     && <0.5
