--- a/quickcheck-instances.cabal
+++ b/quickcheck-instances.cabal
@@ -75,6 +75,7 @@ library
     Test.QuickCheck.Instances.Vector
     Test.QuickCheck.Instances.Void
 
+  other-modules:    Test.QuickCheck.Instances.CustomPrelude
   hs-source-dirs:   src
   build-depends:
       base        >=4.5    && <4.15
@@ -83,7 +84,6 @@ library
 
   build-depends:
       array                 >=0.4.0.0 && <0.6
-    , base-compat           >=0.10.5  && <0.12
     , bytestring            >=0.9.2.1 && <0.11
     , case-insensitive      >=1.2.0.4 && <1.3
     , containers            >=0.4.2.1 && <0.7
