--- a/cabal.project
+++ b/cabal.project
@@ -2,3 +2,63 @@ packages: .
 
 -- allow-newer: bytestring
 -- constraints: bytestring ^>=0.11
+
+-- TODO: Remove the below vendored packages when they have migrated to GHC 9.2
+
+source-repository-package
+  type: git
+  location: https://github.com/awjchen/time-compat
+  tag: dc10e814fcbdd85b7dd8da64df7ae954c580a7ed
+
+source-repository-package
+  type: git
+  location: https://github.com/awjchen/these
+  tag: 1d03307d2b8ca1c03631df7e9d9651b25907ede2
+  subdir: these
+
+source-repository-package
+  type: git
+  location: https://github.com/awjchen/assoc
+  tag: d43d2eccc31a37475898c56e7273f9ebcc182786
+
+source-repository-package
+  type: git
+  location: https://github.com/awjchen/indexed-traversable
+  tag: ea22848a529e1225a0590ac3c73ea06a071
+  subdir: indexed-traversable
+
+source-repository-package
+  type: git
+  location: https://github.com/haskellari/splitmix
+  tag: 4606188a437e6f6478fed2a20cadd716589f25ea
+
+source-repository-package
+  type: git
+  location: https://github.com/haskell/random
+  tag: 6d8b9b5f09bfd726662035c2a9687c1c23a3ebbc
+
+source-repository-package
+  type: git
+  location: https://github.com/awjchen/integer-logarithms
+  tag: 7c774f6024151e284b82dc1ad14f5f454978cdd3
+
+source-repository-package
+  type: git
+  location: https://github.com/awjchen/hashable
+  tag: 1bd4032cf83dab6640352bb9d31e1390e634a0b6
+
+source-repository-package
+  type: git
+  location: https://github.com/awjchen/data-fix
+  tag: fb619187db1b6a358dbe1a62c45b07c904da72d3
+
+source-repository-package
+  type: git
+  location: https://github.com/haskell/primitive
+  tag: 1704f59d91ef964f83c120af4974251d50c2eb68
+
+source-repository-package
+  type: git
+  location: https://github.com/awjchen/vector
+  tag: fb6f584abff163a361563a98a7760c563f7a6832
+  subdir: vector
