--- a/quickcheck-instances.cabal
+++ b/quickcheck-instances.cabal
@@ -1,5 +1,5 @@
 name:               quickcheck-instances
-version:            0.3.26
+version:            0.3.27
 synopsis:           Common quickcheck instances
 description:
   QuickCheck instances.
@@ -122,6 +122,10 @@ library
 
   else
     build-depends: bytestring >=0.10.4.0
+
+  if impl(ghc >=7.8)
+    exposed-modules: Test.QuickCheck.Instances.Text.Short
+    build-depends: text-short >=0.1.3 && <0.2
 
   ghc-options:      -Wall
 
