--- a/quickcheck-instances.cabal
+++ b/quickcheck-instances.cabal
@@ -56,6 +56,7 @@ library
   default-language: Haskell2010
   exposed-modules:
     Test.QuickCheck.Instances
+    Test.QuickCheck.Instances.Aeson
     Test.QuickCheck.Instances.Array
     Test.QuickCheck.Instances.ByteString
     Test.QuickCheck.Instances.CaseInsensitive
@@ -86,7 +87,8 @@ library
     , splitmix    >=0.0.2  && <0.2
 
   build-depends:
-      array                 >=0.4.0.0 && <0.6
+      aeson                 >=1.5.6   && <2
+    , array                 >=0.4.0.0 && <0.6
     , bytestring            >=0.9.2.1 && <0.12
     , case-insensitive      >=1.2.0.4 && <1.3
     , containers            >=0.4.2.1 && <0.7
