--- a/quickcheck-instances.cabal
+++ b/quickcheck-instances.cabal
@@ -1,6 +1,5 @@
 name:               quickcheck-instances
-version:            0.3.27
-x-revision:         3
+version:            0.3.28
 synopsis:           Common quickcheck instances
 description:
   QuickCheck instances.
@@ -59,6 +58,7 @@ library
   exposed-modules:
     Test.QuickCheck.Instances
     Test.QuickCheck.Instances.Array
+    Test.QuickCheck.Instances.Array.Byte
     Test.QuickCheck.Instances.ByteString
     Test.QuickCheck.Instances.CaseInsensitive
     Test.QuickCheck.Instances.Containers
@@ -66,6 +66,7 @@ library
     Test.QuickCheck.Instances.Hashable
     Test.QuickCheck.Instances.Natural
     Test.QuickCheck.Instances.OldTime
+    Test.QuickCheck.Instances.Primitive
     Test.QuickCheck.Instances.Scientific
     Test.QuickCheck.Instances.Semigroup
     Test.QuickCheck.Instances.Solo
@@ -88,26 +89,27 @@ library
     , splitmix    >=0.0.2  && <0.2
 
   build-depends:
-      array                 >=0.4.0.0 && <0.6
-    , bytestring            >=0.9.2.1 && <0.12
-    , case-insensitive      >=1.2.0.4 && <1.3
-    , containers            >=0.4.2.1 && <0.7
-    , data-fix              >=0.3     && <0.4
-    , hashable              >=1.2.7.0 && <1.5
-    , integer-logarithms    >=1.0.3   && <1.1
-    , old-time              >=1.1.0.0 && <1.2
-    , OneTuple              >=0.3     && <0.4
-    , scientific            >=0.3.6.2 && <0.4
-    , strict                >=0.4     && <0.5
-    , tagged                >=0.8.6   && <0.9
-    , text                  >=1.2.3.0 && <1.3 || >=2.0 && <2.1
-    , these                 >=1.1.1.1 && <1.2
-    , time-compat           >=1.9.4   && <1.10
-    , transformers          >=0.3.0.0 && <0.7
-    , transformers-compat   >=0.6.5   && <0.8
-    , unordered-containers  >=0.2.2.0 && <0.3
-    , uuid-types            >=1.0.3   && <1.1
-    , vector                >=0.9     && <0.14
+      array                 >=0.4.0.0  && <0.6
+    , bytestring            >=0.9.2.1  && <0.12
+    , case-insensitive      >=1.2.0.4  && <1.3
+    , containers            >=0.4.2.1  && <0.7
+    , data-fix              >=0.3      && <0.4
+    , hashable              >=1.2.7.0  && <1.5
+    , integer-logarithms    >=1.0.3    && <1.1
+    , old-time              >=1.1.0.0  && <1.2
+    , OneTuple              >=0.3      && <0.4
+    , primitive             >=0.6.4.0  && <0.8
+    , scientific            >=0.3.6.2  && <0.4
+    , strict                >=0.4      && <0.5
+    , tagged                >=0.8.6    && <0.9
+    , text                  >=1.2.3.0  && <1.3 || >=2.0 && <2.1
+    , these                 >=1.1.1.1  && <1.2
+    , time-compat           >=1.9.4    && <1.10
+    , transformers          >=0.3.0.0  && <0.7
+    , transformers-compat   >=0.6.5    && <0.8
+    , unordered-containers  >=0.2.2.0  && <0.3
+    , uuid-types            >=1.0.3    && <1.1
+    , vector                >=0.12.3.1 && <0.14
 
   -- version is irrelevant.
   build-depends:    time
@@ -117,7 +119,7 @@ library
 
   if !impl(ghc >=7.10)
     build-depends:
-        nats  >=1     && <1.2
+        nats  >=1.1.2 && <1.2
       , void  >=0.7.2 && <0.8
 
   if flag(bytestring-builder)
@@ -142,6 +144,7 @@ test-suite self-test
   build-depends:
       base
     , containers
+    , primitive
     , QuickCheck
     , quickcheck-instances
     , tagged
